# kicad-image-gen

./: .gitignore  BUGS.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  eval_harness.py  kicad_image_gen_theme.json  pyproject.toml
.autoresearch/: results.tsv
reference/: train_analog_input.kicad_pcb  train_analog_input.kicad_prl  train_analog_input.kicad_pro  train_ethernet.kicad_pcb  train_ethernet.kicad_prl  train_ethernet.kicad_pro  train_mcu_core.kicad_pcb  train_mcu_core.kicad_prl  train_mcu_core.kicad_pro  train_power.kicad_pcb  train_power.kicad_prl  train_power.kicad_pro  train_relay.kicad_pcb  train_relay.kicad_prl  train_relay.kicad_pro  ~train_mcu_core.kicad_pro.lck
src/kicad_image_gen/: __init__.py  cli.py  core.py  ratsnest.py  render_2d.py  render_2d_composite.py  render_3d.py
tests/: conftest.py  test_render_2d.py  test_render_3d.py
